index.html BIG MAC

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto de Vida</title>
+    <title>Meu BIG MAC</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <script src="main.js"></script> 
-  <h1> Aula sobre Laço de Repetição</h1>
-  <div id="texto-animado">ATHLÉTICO PR</div>
+  <h1> Eu quero um...</h1>
+  <div id="texto-animado">BIG MAC!</div>
   
        
 </body>
